--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -6,16 +6,6 @@
   align-items: center;
   position: relative;
 }
-#nav-up .nav-container .language-selector {
-  position: absolute;
-  right: 4%;
-}
-#nav-up .nav-container .language-selector span {
-  font-size: 14px;
-}
-#nav-up .nav-container .language-selector i {
-  font-size: 12px;
-}
 
 #nav-area {
   padding-top: 2%;
@@ -93,6 +83,10 @@
   src: url("https://fonts.googleapis.com/css2?family=Marck+Script&display=swap");
 }
 @font-face {
+  font-family: Qwitcher Grypen;
+  src: url("https://fonts.googleapis.com/css2?family=Qwitcher+Grypen&display=swap");
+}
+@font-face {
   font-family: WindSongt;
   src: url("https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap");
 }
@@ -104,8 +98,15 @@
   font-family: Alex Brush;
   src: url("https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap");
 }
+@font-face {
+  font-family: Great Vibes;
+  src: url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
+}
 #slider {
   padding-top: 2%;
+}
+#slider .swiper-pagination {
+  color: rgb(192, 133, 134);
 }
 #slider .swiper {
   width: 100%;
@@ -160,6 +161,9 @@
 #slider .swiper-slide .slide-1 .shop {
   top: 68%;
   left: 13%;
+}
+#slider .swiper-slide .slide-1 .shop-click {
+  transform: translateX();
 }
 #slider .swiper-slide .slide-1 .sale {
   left: 13%;
@@ -475,4 +479,139 @@
   position: relative;
   top: 35px;
   color: white;
+}
+
+#latest-news {
+  padding-top: 9%;
+  padding-bottom: 4%;
+}
+
+#blogs .blog-content {
+  padding-left: 20px;
+}
+#blogs .blog {
+  position: relative;
+  width: 420px;
+  height: 419px;
+  border: 1px solid #dfd7d7;
+}
+#blogs .blog .blogg {
+  color: #e9ac98;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 500;
+  position: absolute;
+  top: 8%;
+}
+#blogs .blog .blog-date {
+  position: absolute;
+  top: 16%;
+}
+#blogs .blog .blog-date span {
+  font-size: 24px;
+  line-height: 30px;
+  text-transform: capitalize;
+  color: #000;
+  font-weight: 400;
+}
+#blogs .blog .blog-title {
+  position: absolute;
+  top: 46%;
+}
+#blogs .blog .blog-title h4 {
+  color: rgba(0, 0, 0, 0.6392156863);
+  font-weight: bolder;
+}
+#blogs .blog .read-more a {
+  text-decoration: none;
+  color: #e9ac98;
+  font-size: 19px;
+  font-weight: 500;
+  position: absolute;
+  bottom: 8%;
+}
+#blogs .blog .read-more a i {
+  font-size: 14px;
+  margin: 5px;
+}
+#blogs .blog .blog-img {
+  width: 419px;
+  height: 0px;
+  position: absolute;
+  z-index: -11;
+  opacity: 0;
+  transition: 1s;
+}
+#blogs .blog .blog-img img {
+  width: 100%;
+  height: 100%;
+}
+#blogs .blog:hover .blog-img {
+  opacity: 1;
+  height: 419px;
+}
+#blogs .blog:hover .blogg {
+  color: white;
+}
+#blogs .blog:hover .created {
+  color: white;
+}
+#blogs .blog:hover .blog-title h4 {
+  display: none;
+}
+
+#subscrive-header {
+  padding-top: 9%;
+  padding-bottom: 6%;
+}
+#subscrive-header .subscrive-title {
+  text-align: center;
+  padding-top: 4%;
+  position: relative;
+  right: 2%;
+}
+#subscrive-header .subscrive-title h3 {
+  font-family: "Great Vibes", cursive;
+  font-size: 77px;
+  font-weight: 500;
+  color: #e9ac98;
+}
+
+#subscrive {
+  background: #e9ac98;
+}
+#subscrive .left-side {
+  position: relative;
+  left: 28%;
+  bottom: 14%;
+  height: 180px;
+}
+#subscrive .left-side h3 {
+  font-family: "Qwitcher Grypen", cursive;
+  color: #fff;
+  opacity: 0.3;
+  font-size: 149px;
+}
+#subscrive .left-side h4 {
+  position: absolute;
+  bottom: 14%;
+  left: 11%;
+  font-size: 26px;
+}
+#subscrive .block-content input {
+  border: none;
+  color: white;
+  background: 0 0;
+}
+#subscrive .block-content input::-moz-placeholder {
+  color: white;
+  opacity: 0.5;
+}
+#subscrive .block-content input:-ms-input-placeholder {
+  color: white;
+  opacity: 0.5;
+}
+#subscrive .block-content input::placeholder {
+  color: white;
+  opacity: 0.5;
 }/*# sourceMappingURL=style.css.map */
