--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -82,6 +82,10 @@
                 display: inline;
                 margin: 3px;
                 font-weight: 600;
+
+                &:hover {
+                    color: #e9ac98;
+                }
             }
 
             i {
@@ -94,6 +98,7 @@
                 color: #e9ac98;
             }
         }
+
     }
 }
 
@@ -163,6 +168,28 @@
                 border: 1px solid #58525e;
                 padding: 13px 19px 13px 12px;
                 font-size: 11px;
+                display: block;
+                background: linear-gradient(to right, #e9ac98 50%, #fff2f2 50%);
+                background-size: 200% 100%;
+                background-position: right bottom;
+                transition: all .5s ease-out;
+
+                &:hover {
+
+                    background-position: left bottom;
+                    border: none;
+                    padding: 13px 30px 13px 12px;
+                    padding-left: 3%;
+
+                    i {
+                        position: absolute;
+                        left: 18%;
+                        top:15px;
+                        transition: all .5s ease-out;
+
+                    }
+
+                }
             }
 
             .sale {
@@ -176,7 +203,6 @@
             .saleName {
                 font-family: 'Marck Script', cursive;
                 position: absolute;
-
                 font-size: 50px;
                 color: rgb(192, 133, 134);
             }
@@ -195,6 +221,7 @@
             .shop {
                 top: 68%;
                 left: 13%;
+
             }
 
             .shop-click {
@@ -326,6 +353,31 @@
             font-size: 11px;
             color: #e9ac98;
             font-weight: 500;
+            display: block;
+            background: linear-gradient(to right, #e9ac98 50%, white 50%);
+            background-size: 200% 100%;
+            background-position: right bottom;
+            transition: all .5s ease-out;
+           i{
+            position: relative;
+            left: 7%;
+           }
+            &:hover {
+
+                background-position: left bottom;
+                border: none;
+                text-align: right;
+
+                i {
+                    position: absolute;
+                    left: 20%;
+                    top:22px;
+                    transition: all .5s ease-out;
+
+                }
+
+            }
+            
         }
 
 
@@ -368,11 +420,43 @@
         .product-img {
             width: 306px;
             height: 379px;
+            position: relative;
+            overflow: hidden;
+
+            .primary-img {
+                width: 100%;
+                transition: all .8s cubic-bezier(0, 0, 0.05, 1);
+            }
+
+            .secondary-img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                opacity: 0;
+                visibility: hidden;
+                width: 100%;
+                transition: .8s cubic-bezier(0, 0, 0.2, 1);
+            }
         }
 
         img {
             width: 100%;
             height: 100%;
+        }
+
+        &:hover {
+            .product-img {
+                .primary-img {
+                    transform: scale3d(1.05, 1.05, 1.05) translateZ(0);
+                }
+            }
+
+            .secondary-img {
+                opacity: 1;
+                visibility: visible;
+                transform: scale3d(1.05, 1.05, 1.05) translateZ(0);
+
+            }
         }
     }
 
@@ -416,16 +500,44 @@
             position: absolute;
             display: flex;
             align-items: center;
+            text-align: center;
             gap: 17px;
             color: #58525e;
             font-family: Roboto, Helvetica Neue, sans-serif;
             text-decoration: none;
             border: 1px solid #58525e;
-            padding: 17px 21px 13px 17px;
+            padding: 20px 21px 17px 17px;
             font-size: 11px;
+            height: 56px;
+            width: 148px;
             color: #000;
             font-weight: 500;
             text-transform: uppercase;
+            display: block;
+            background: linear-gradient(to right, #e9ac98 50%, white 50%);
+            background-size: 200% 100%;
+            background-position: right bottom;
+            transition: all .5s ease-out;
+           i{
+            position: relative;
+            left: 7%;
+           }
+            &:hover {
+
+                background-position: left bottom;
+                border: none;
+                text-align: right;
+
+                i {
+                    position: absolute;
+                    left: 20%;
+                    top:22px;
+                    transition: all .5s ease-out;
+
+                }
+
+            }
+            
         }
 
     }
@@ -493,6 +605,7 @@
         color: #58525e;
         border-radius: 7px;
         font-weight: 500;
+    
     }
 }
 
@@ -764,16 +877,198 @@
     }
 
     .block-content {
-        input {
-            border: none;
-            color: #ffff;
-            background: 0 0;
+        position: relative;
+        top: 69px;
+        left: 66px;
+        border-bottom: 1px solid white;
 
-        &::placeholder{
+        width: 75%;
+
+        .input-area {
+            display: inline;
+
+            input {
+                border: none;
                 color: #ffff;
-                opacity: .5;
+                background: 0 0;
+                width: 403px;
+
+                &::placeholder {
+                    color: #ffff;
+                    opacity: .5;
+                }
+
+
+            }
+        }
+
+        button {
+            width: 185px;
+            height: 48px;
+            border: none;
+            border-bottom: 3px solid white;
+            background: 0, 0;
+            color: #fff;
+            font-size: 12px;
+            line-height: 30px;
+            position: relative;
+            left: 49px;
+            font-weight: 500;
+        }
+    }
+
+}
+
+#footer-top {
+    background-color: #f9f9f5;
+    padding-top: 6%;
+    padding-bottom: 6%;
+
+    .service-item {
+        text-align: center;
+
+        img {
+            display: block;
+            margin: auto;
+            padding-bottom: 20px;
+        }
+
+        .title {
+            color: #000;
+            font-size: 16px;
+            line-height: 30px;
+            font-weight: 700;
+        }
+
+        p {
+            margin-top: 1%;
+            font-size: 14px;
+            color: #4b5955;
+        }
+
+    }
+}
+
+#footer {
+    padding-top: 5%;
+
+    .ApColumn {
+        width: 100%;
+
+        ul {
+            list-style: none;
+
+            li {
+                margin-bottom: 10px;
+
+                a {
+                    font-size: 14px;
+                    color: #4b5955;
+                    text-decoration: none;
+                }
             }
 
         }
+    }
+
+    .logo {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-right: 1px solid #e6e6e6;
+        border-left: 1px solid #e6e6e6;
+    }
+
+    .block-information {
+        p {
+            font-size: 14px;
+            color: #4b5955;
+        }
+
+        ul {
+            list-style: none;
+            padding: inherit;
+
+            li {
+                font-size: 14px;
+                color: #4b5955;
+
+                span {
+                    color: #000;
+                }
+            }
+        }
+
+    }
+
+    .block-social {
+        display: flex;
+        align-items: center;
+
+        h6 {
+            font-weight: 700;
+            padding-bottom: 7px;
+        }
+
+        ul {
+            display: flex;
+            align-items: center;
+            list-style: none;
+            padding-left: 2%;
+
+            i {
+                cursor: pointer;
+                color: #000;
+                width: 22px;
+
+            }
+        }
+    }
+}
+
+hr {
+    color: #b4afaf;
+}
+
+#footer-bottom {
+    .block-copyright {
+        padding-top: 50px;
+        padding-bottom: 100px;
+        display: block;
+        text-align: center;
+        color: #4b5955;
+        font-size: 14px;
+
+        span {
+            color: #e9ac98;
+        }
+    }
+}
+
+img.rot {
+    animation: 1s linear 0s normal none infinite running rot;
+    -webkit-animation: 10s linear 0s normal none infinite running rot;
+    width: 180px;
+}
+
+@keyframes rot {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes rot {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
