--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -69,6 +69,9 @@
   margin: 3px;
   font-weight: 600;
 }
+#nav-down .top-menu a li:hover {
+  color: #e9ac98;
+}
 #nav-down .top-menu a i {
   position: absolute;
   top: 4px;
@@ -137,6 +140,23 @@
   border: 1px solid #58525e;
   padding: 13px 19px 13px 12px;
   font-size: 11px;
+  display: block;
+  background: linear-gradient(to right, #e9ac98 50%, #fff2f2 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.5s ease-out;
+}
+#slider .swiper-slide .slide .shop:hover {
+  background-position: left bottom;
+  border: none;
+  padding: 13px 30px 13px 12px;
+  padding-left: 3%;
+}
+#slider .swiper-slide .slide .shop:hover i {
+  position: absolute;
+  left: 18%;
+  top: 15px;
+  transition: all 0.5s ease-out;
 }
 #slider .swiper-slide .slide .sale {
   position: absolute;
@@ -256,6 +276,26 @@
   font-size: 11px;
   color: #e9ac98;
   font-weight: 500;
+  display: block;
+  background: linear-gradient(to right, #e9ac98 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.5s ease-out;
+}
+#introducing .info-text .btn-about i {
+  position: relative;
+  left: 7%;
+}
+#introducing .info-text .btn-about:hover {
+  background-position: left bottom;
+  border: none;
+  text-align: right;
+}
+#introducing .info-text .btn-about:hover i {
+  position: absolute;
+  left: 20%;
+  top: 22px;
+  transition: all 0.5s ease-out;
 }
 
 #featured-products {
@@ -285,10 +325,33 @@
 #products .cart .product-img {
   width: 306px;
   height: 379px;
+  position: relative;
+  overflow: hidden;
+}
+#products .cart .product-img .primary-img {
+  width: 100%;
+  transition: all 0.8s cubic-bezier(0, 0, 0.05, 1);
+}
+#products .cart .product-img .secondary-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  transition: 0.8s cubic-bezier(0, 0, 0.2, 1);
 }
 #products .cart img {
   width: 100%;
   height: 100%;
+}
+#products .cart:hover .product-img .primary-img {
+  transform: scale3d(1.05, 1.05, 1.05) translateZ(0);
+}
+#products .cart:hover .secondary-img {
+  opacity: 1;
+  visibility: visible;
+  transform: scale3d(1.05, 1.05, 1.05) translateZ(0);
 }
 #products .product-name {
   text-align: center;
@@ -321,16 +384,39 @@
   position: absolute;
   display: flex;
   align-items: center;
+  text-align: center;
   gap: 17px;
   color: #58525e;
   font-family: Roboto, Helvetica Neue, sans-serif;
   text-decoration: none;
   border: 1px solid #58525e;
-  padding: 17px 21px 13px 17px;
+  padding: 20px 21px 17px 17px;
   font-size: 11px;
+  height: 56px;
+  width: 148px;
   color: #000;
   font-weight: 500;
   text-transform: uppercase;
+  display: block;
+  background: linear-gradient(to right, #e9ac98 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.5s ease-out;
+}
+#products .btn-show-more a i {
+  position: relative;
+  left: 7%;
+}
+#products .btn-show-more a:hover {
+  background-position: left bottom;
+  border: none;
+  text-align: right;
+}
+#products .btn-show-more a:hover i {
+  position: absolute;
+  left: 20%;
+  top: 22px;
+  transition: all 0.5s ease-out;
 }
 
 #about-us {
@@ -598,20 +684,169 @@
   left: 11%;
   font-size: 26px;
 }
-#subscrive .block-content input {
+#subscrive .block-content {
+  position: relative;
+  top: 69px;
+  left: 66px;
+  border-bottom: 1px solid white;
+  width: 75%;
+}
+#subscrive .block-content .input-area {
+  display: inline;
+}
+#subscrive .block-content .input-area input {
   border: none;
   color: white;
   background: 0 0;
+  width: 403px;
 }
-#subscrive .block-content input::-moz-placeholder {
+#subscrive .block-content .input-area input::-moz-placeholder {
   color: white;
   opacity: 0.5;
 }
-#subscrive .block-content input:-ms-input-placeholder {
+#subscrive .block-content .input-area input:-ms-input-placeholder {
   color: white;
   opacity: 0.5;
 }
-#subscrive .block-content input::placeholder {
+#subscrive .block-content .input-area input::placeholder {
   color: white;
   opacity: 0.5;
+}
+#subscrive .block-content button {
+  width: 185px;
+  height: 48px;
+  border: none;
+  border-bottom: 3px solid white;
+  background: 0, 0;
+  color: #fff;
+  font-size: 12px;
+  line-height: 30px;
+  position: relative;
+  left: 49px;
+  font-weight: 500;
+}
+
+#footer-top {
+  background-color: #f9f9f5;
+  padding-top: 6%;
+  padding-bottom: 6%;
+}
+#footer-top .service-item {
+  text-align: center;
+}
+#footer-top .service-item img {
+  display: block;
+  margin: auto;
+  padding-bottom: 20px;
+}
+#footer-top .service-item .title {
+  color: #000;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 700;
+}
+#footer-top .service-item p {
+  margin-top: 1%;
+  font-size: 14px;
+  color: #4b5955;
+}
+
+#footer {
+  padding-top: 5%;
+}
+#footer .ApColumn {
+  width: 100%;
+}
+#footer .ApColumn ul {
+  list-style: none;
+}
+#footer .ApColumn ul li {
+  margin-bottom: 10px;
+}
+#footer .ApColumn ul li a {
+  font-size: 14px;
+  color: #4b5955;
+  text-decoration: none;
+}
+#footer .logo {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #e6e6e6;
+  border-left: 1px solid #e6e6e6;
+}
+#footer .block-information p {
+  font-size: 14px;
+  color: #4b5955;
+}
+#footer .block-information ul {
+  list-style: none;
+  padding: inherit;
+}
+#footer .block-information ul li {
+  font-size: 14px;
+  color: #4b5955;
+}
+#footer .block-information ul li span {
+  color: #000;
+}
+#footer .block-social {
+  display: flex;
+  align-items: center;
+}
+#footer .block-social h6 {
+  font-weight: 700;
+  padding-bottom: 7px;
+}
+#footer .block-social ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding-left: 2%;
+}
+#footer .block-social ul i {
+  cursor: pointer;
+  color: #000;
+  width: 22px;
+}
+
+hr {
+  color: #b4afaf;
+}
+
+#footer-bottom .block-copyright {
+  padding-top: 50px;
+  padding-bottom: 100px;
+  display: block;
+  text-align: center;
+  color: #4b5955;
+  font-size: 14px;
+}
+#footer-bottom .block-copyright span {
+  color: #e9ac98;
+}
+
+img.rot {
+  animation: 1s linear 0s normal none infinite running rot;
+  -webkit-animation: 10s linear 0s normal none infinite running rot;
+  width: 180px;
+}
+
+@keyframes rot {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes rot {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }/*# sourceMappingURL=style.css.map */
