--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -684,11 +684,12 @@
 
     }
 
-    .btn {
+    .btnn {
         padding-top: 4%;
         display: flex;
         justify-content: center;
         align-items: center;
+        position: relative;
     }
 
     .btn-about {
